Update link to discord

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -5,7 +5,7 @@ import { Steps, Callout } from "nextra/components";
 Welcome to ASoC (ALiAS Summer of Code), an exciting open-source summer program organized by ALiAS (Amity Linux Assistance Sapience).
 Our program is all about providing Amity students with a fantastic opportunity to dive into the world of open-source projects, gain valuable experience, and sharpen their skills in open-source software development. We believe in the power of collaboration, learning, and fostering a strong community of open-source contributors.
 
-**Got Questions?** Check out our [FAQs](/asoc/faqs) page or join [the ALiAS Official Discord Server](https://discord.gg/KEXGnysX).
+**Got Questions?** Check out our [FAQs](/asoc/faqs) page or join [the ALiAS Official Discord Server](https://discord.gg/7DYnMMr8).
 
 **Can't wait?** Check out our [Projects page](/projects/browse-projects) to get a sneak peek at the exciting projects you can contribute to during ASoC.
 
