Update discord url

--- a/pages/faq.mdx
+++ b/pages/faq.mdx
@@ -29,7 +29,7 @@ A: Absolutely! ASoC is beginner-friendly, and we encourage students who are new 
 
 **Q: How do get in touch with mentors or ASoC staff?**
 
-A: [The ALiAS Official Discord Server](https://discord.gg/KEXGnysX)
+A: [The ALiAS Official Discord Server](https://discord.gg/7DYnMMr8)
 
 
 ## Mentors
