Update second discord url

--- a/pages/faq.mdx
+++ b/pages/faq.mdx
@@ -60,7 +60,7 @@ A: Yes, you can propose your own project for ASoC. We welcome innovative and rel
 
 **Q: How will communication be facilitated during the program?**
 
-A: Communication between participants, mentors, and program stakeholders will be facilitated through [the ALiAS Official Discord Server](https://discord.gg/KEXGnysX). Regular check-ins, meetings, and progress updates are encouraged to ensure effective communication throughout the program.
+A: Communication between participants, mentors, and program stakeholders will be facilitated through [the ALiAS Official Discord Server](https://discord.gg/7DYnMMr8). Regular check-ins, meetings, and progress updates are encouraged to ensure effective communication throughout the program.
 
 **Q: What are the project deliverables expected from mentees?**
 
