Remove application form

--- a/pages/mentees.mdx
+++ b/pages/mentees.mdx
@@ -44,8 +44,7 @@ The ASoC program is designed to help you build essential skills, gain valuable e
 ## Join ASoC as a Mentee [#mentee-form]
 
 <>
-  <Callout type="info" emoji="ℹ️">
-    Refresh the page if the form does not load.
+  <Callout type="warning" emoji="🚨">
+    Applications are now closed. Results will be declared shortly
   </Callout>
-  <MenteeForm />
 </>
